# ROAM-CRAS

./: Readme.md
transforms/: CMakeLists.txt  package.xml
transforms/launch/: tfs_sense.launch
transforms/models/sense/: actuators.urdf.xacro  sense.urdf.xacro  sensors.urdf.xacro
transforms/models/sense/actuators/thruster_description/: thruster.urdf.xacro
transforms/models/sense/mesh/: sense.STL
transforms/models/sense/sensors/deltat_description/: deltat.urdf.xacro
transforms/models/sense/sensors/deltat_description/mesh/: deltat.stl
transforms/models/sense/sensors/gps_description/: gps.urdf.xacro
transforms/models/sense/sensors/imu_description/: imu.urdf.xacro
transforms/models/sense/sensors/mynteye_description/: mynteye.urdf.xacro
transforms/models/sense/sensors/swiftnav_description/: swiftnav.urdf.xacro
transforms/models/sense/sensors/velodyne_description/: velodyne.urdf.xacro
