<?xml version="1.0"?>
<package>
  <name>transforms</name>
  <version>0.1.0</version>
  <description>The transforms package</description>

  <maintainer email="daniel.f.campos@inesctec.pt">Daniel Campos</maintainer>
  <license>CC BY-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
